@@ -5,6 +5,7 @@ import appeng.api.stacks.KeyCounter;
 import java.lang.ref.ReferenceQueue;
 import java.lang.ref.WeakReference;
 import java.math.BigInteger;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -74,22 +75,45 @@ public final class BigKeyCounterSidecars {
             return;
         }
 
-        Map<AEKey, BigInteger> visible = new LinkedHashMap<>();
-        // AE2の抽出Simulationで除外されたキーをBigInteger側だけ復活させない。
-        for (Map.Entry<AEKey, BigInteger> entry : sourceSnapshot.amounts().entrySet()) {
-            // long側に正の在庫として残ったキーだけを計画用Sidecarへ伝播する。
-            if (target.get(entry.getKey()) > 0L) {
-                visible.put(entry.getKey(), entry.getValue());
+        // Issue #93: KeyCounter検索とJDK MapN反復を同じC2ループへ融合させない。
+        Set<AEKey> visibleKeys = capturePositiveKeys(target);
+        put(target, retainVisibleAmounts(sourceSnapshot, visibleKeys));
+    }
+
+    /** AE2のlong Facadeから、現在正量として見えているキーだけを独立Snapshotへ取り出す。 */
+    private static Set<AEKey> capturePositiveKeys(KeyCounter target) {
+        Set<AEKey> visibleKeys = new LinkedHashSet<>();
+        // 可変KeyCounterの走査をBigInteger Mapの走査から分離し、二種類の実装を同時に触らない。
+        for (var entry : target) {
+            // 0以下はAE2側で在庫として見えていないため、Sidecarにも伝播しない。
+            if (entry.getLongValue() <= 0L) {
+                continue;
             }
+            visibleKeys.add(entry.getKey());
         }
+        return Collections.unmodifiableSet(visibleKeys);
+    }
+
+    /** 不変source Snapshotから、AE2のlong Facadeに残ったキーだけを抽出する。 */
+    private static Snapshot retainVisibleAmounts(
+            Snapshot sourceSnapshot,
+            Set<AEKey> visibleKeys) {
+        Map<AEKey, BigInteger> visible = new LinkedHashMap<>();
         Set<AEKey> exactVisible = new LinkedHashSet<>();
-        for (AEKey key : sourceSnapshot.exactKeys()) {
-            // 画面側Counterに存在しないキーを正確在庫として復活させない。
-            if (visible.containsKey(key)) {
+        // 可視キーSnapshotに存在する正確値だけを伝播し、AE2が除外したキーを復活させない。
+        for (Map.Entry<AEKey, BigInteger> entry : sourceSnapshot.amounts().entrySet()) {
+            AEKey key = entry.getKey();
+            // targetに存在しないキーは、BigInteger側だけで再追加しない。
+            if (!visibleKeys.contains(key)) {
+                continue;
+            }
+            visible.put(key, entry.getValue());
+            // sourceで値が証明済みのキーだけ、コピー先でもexactとして扱う。
+            if (sourceSnapshot.isExact(key)) {
                 exactVisible.add(key);
             }
         }
-        put(target, new Snapshot(visible, sourceSnapshot.complete(), exactVisible));
+        return new Snapshot(visible, sourceSnapshot.complete(), exactVisible);
     }
 
     /** long FacadeとBigInteger Sidecarを一つの独立したKeyCounterへ複製する。 */
@@ -194,7 +218,8 @@ public final class BigKeyCounterSidecars {
                     checked.put(key, amount);
                 }
             }
-            amounts = Map.copyOf(checked);
+            // Issue #93: MapNとfastutil検索のC2融合を避けるため、所有Mapを読み取り専用化する。
+            amounts = Collections.unmodifiableMap(checked);
 
             Set<AEKey> checkedExactKeys = new LinkedHashSet<>();
             for (AEKey key : exactKeys) {
@@ -204,7 +229,7 @@ public final class BigKeyCounterSidecars {
                     checkedExactKeys.add(key);
                 }
             }
-            exactKeys = Set.copyOf(checkedExactKeys);
+            exactKeys = Collections.unmodifiableSet(checkedExactKeys);
         }
 
         public BigInteger amount(AEKey key) {
